[package]
name = "watcher-lib"
version = "0.1.0"
authors = ["Joe Packard <joe@gladiusso.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rusqlite = { git = "https://github.com/trevyn/rusqlite", branch = "wasm32-unknown-unknown", features = ["bundled", "serialize"] }
serde_json = "1.0.108"
wasm-bindgen = "0.2.89"
serde = { version = "1.0.193", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
log = "0.4.25"
wasm-logger = "0.2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
